--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.15",
-    "react": "^18.1.0"
+    "react": "^18.1.0",
+    "sweetalert": "^2.1.2"
   }
 }
