--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "mongoose": "^6.3.4",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.15",
     "react": "^18.1.0",
     "sweetalert": "^2.1.2"
